# yatirimbot

./: .pre-commit-config.yaml  README.md  app.py  devbox.json  main.py  pyproject.toml
src/: email_utils.py
src/bist/: bist_30_change.py  bist_comp.py  bist_open_close.py  bist_sector_info.py  bist_sector_stock_info.py  bist_stock_by_time.py  halka_arz.py
src/commodity/: commodity_price.py  gold_price.py  silver_price.py
src/crypto/: crypto_utils.py
src/etc/: exchange_rates.py  long_term_performance.py
src/us/: us_open_close.py
templates/: index.html
