[project]
name = "yatirimbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "datetime>=5.5",
    "flask>=3.0.3",
    "http-client>=0.1.22",
    "matplotlib>=3.9.2",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "yfinance>=0.2.48",
]
